syntax = "proto3";

package user;
option go_package = "./pb";

message UserResponse {
  string id = 1;
  string identity_type = 2;
  string identity_number = 3;
  string full_name = 4;
  string email = 5;
  string phone = 6;
  string address = 7;
  string birth_date = 8;
  string created_at = 9;
  string updated_at = 10;
}

message UserResponses { repeated UserResponse users = 1; }

message UserCreateRequest {
  string identity_type = 1;
  string identity_number = 2;
  string full_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  string birth_date = 7;
}

message UserUpdateRequest {
  string id = 1;
  UserUpdateRequestData data = 2;
}

message UserUpdateRequestData {
  optional string identity_type = 1;
  optional string identity_number = 2;
  optional string full_name = 3;
  optional string email = 4;
  optional string phone = 5;
  optional string address = 6;
  optional string birth_date = 7;
}

message UserGetRequest { string id = 1; }

message UsersGetRequest {}

message UserDeleteRequest { string id = 1; }

service UserService {
  rpc GetUsers(UsersGetRequest) returns (UserResponses) {}
  rpc GetUser(UserGetRequest) returns (UserResponse) {}
  rpc CreateUser(UserCreateRequest) returns (UserResponse) {}
  rpc UpdateUser(UserUpdateRequest) returns (UserResponse) {}
  rpc DeleteUser(UserDeleteRequest) returns (UserResponse) {}
}
